--- a/etc/studio.yml
+++ b/etc/studio.yml
@@ -224,12 +224,12 @@ ELASTIC_SEARCH_CONFIG:
     - host: 127.0.0.1
       port: 9200
       use_ssl: false
-EMAIL_BACKEND: 'django.core.mail.backends.smtp.EmailBackend'
-EMAIL_HOST: 'smtp.gmail.com'
-EMAIL_HOST_PASSWORD: 'Nehu@123'
-EMAIL_HOST_USER: 'bhavesh.mandloi@perpetualtp.com'
+EMAIL_BACKEND: django.core.mail.backends.smtp.EmailBacken
+EMAIL_HOST: smtp.gmail.com
+EMAIL_HOST_PASSWORD: Nehu@123
+EMAIL_HOST_USER: bhavesh.mandloi@perpetualtp.com
 EMAIL_PORT: 587
-EMAIL_USE_TLS: True
+EMAIL_USE_TLS: true
 ENABLE_COMPREHENSIVE_THEMING: false
 ENTERPRISE_API_URL: http://openedxdemo2.slxprime.com/enterprise/api/v1
 ENTERPRISE_MARKETING_FOOTER_QUERY_PARAMS: {}
