--- a/etc/studio.yml
+++ b/etc/studio.yml
@@ -224,7 +224,7 @@ ELASTIC_SEARCH_CONFIG:
     - host: 127.0.0.1
       port: 9200
       use_ssl: false
-EMAIL_BACKEND: django.core.mail.backends.smtp.EmailBacken
+EMAIL_BACKEND: django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST: smtp.gmail.com
 EMAIL_HOST_PASSWORD: Nehu@123
 EMAIL_HOST_USER: bhavesh.mandloi@perpetualtp.com
