--- a/etc/studio.yml
+++ b/etc/studio.yml
@@ -226,8 +226,8 @@ ELASTIC_SEARCH_CONFIG:
       use_ssl: false
 EMAIL_BACKEND: django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST: smtp.gmail.com
-EMAIL_HOST_PASSWORD: Nehu@123
-EMAIL_HOST_USER: bhavesh.mandloi@perpetualtp.com
+EMAIL_HOST_PASSWORD: Slxptp@123
+EMAIL_HOST_USER: test@slxlearning.com
 EMAIL_PORT: 587
 EMAIL_USE_TLS: true
 ENABLE_COMPREHENSIVE_THEMING: false
